fix(Search): fix flicking on Safari

--- a/packages/vkui/src/components/Search/Search.module.css
+++ b/packages/vkui/src/components/Search/Search.module.css
@@ -131,18 +131,20 @@
   align-items: center;
   justify-content: center;
   color: var(--vkui--color_icon_secondary);
-  transform: translateX(100%);
+
+  /* Используем translate3d, чтобы поправить дергание при наведении в Safari */
+  transform: translate3d(100%, 0, 0);
 
   --vkui_internal--search_icon_size: calc(var(--vkui_internal--search_height) + 4px);
 }
 
 .Search__controls--hasIcon {
   /* Исключаем параметр icon из расчёта, чтобы он оставался видимым */
-  transform: translateX(calc(100% - var(--vkui_internal--search_icon_size)));
+  transform: translate3d(calc(100% - var(--vkui_internal--search_icon_size)), 0, 0);
 }
 
 .Search__controls--visible {
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 
 .Search--sizeY-compact .Search__controls {
